--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,100 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Antonio&display=swap');
+
+@font-face {
+  font-family: 'Probert Bold';
+  src: url('./fonts/probert_bold-webfont.woff2') format('woff2'),
+       url('./fonts/probert_bold-webfont.woff') format('woff');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face{  
+  font-family: 'Probert';
+  src: url('./fonts/probert-webfont.woff2') format('woff2'),
+       url('./fonts/probert-webfont.woff') format('woff');
 }
+
+/* Variables */
+
+:root{
+  --heading-font: 'Probert Bold', sans-serif;
+  --main-font: 'Antonio', 'Lato', sans-serif;
+  --bg-color: #242842;
+  --font-color: #FFFFFF;
+  --good-yellow: #B58D02;
+  --good-blue: #2A6087;
+  --highlight: #617DA6;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+html, body{
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background-color: var(--bg-color);
+}
+/* Typography */
+
+h1, h2, h3{
+  font-family: var(--heading-font);
+  text-transform: uppercase;
+}
+
+p, span, a, li, button, select, textarea, input{
+  font-family: var(--main-font);
+}
+
+h1, h2, h3, p, span, li, a{
+  color:var(--font-color);
+}
+
+
+/* Hero */
+
+.hero{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
+.hero .banner img{
+  width: 100%;
+}
+
+.hero .titles{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1 1 auto;
+}
+
+.titles h1{
+  letter-spacing: 4px;
+  margin: 0;
+  font-size: 4rem;
+}
+
+.titles .seperator{
+  display: block;
+  max-width: 800px;
+  margin: .2rem auto .4rem;
+  height: 1px;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0) 5%, #fff 15%, #fff 80%, rgba(255, 255, 255, 0) 95%);
+}
+
+.titles span{
+  font-family: 'Probert', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 1.5rem;
+}
+
+/*  */
 
 .intro {
   margin: auto;
