--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,13 @@
 @font-face {
   font-family: 'Probert Bold';
   src: url('./fonts/probert_bold-webfont.woff2') format('woff2'),
-       url('./fonts/probert_bold-webfont.woff') format('woff');
+    url('./fonts/probert_bold-webfont.woff') format('woff');
 }
 
-@font-face{  
+@font-face {
   font-family: 'Probert';
   src: url('./fonts/probert-webfont.woff2') format('woff2'),
-       url('./fonts/probert-webfont.woff') format('woff');
+    url('./fonts/probert-webfont.woff') format('woff');
 }
 
 /* Variables */
@@ -76,11 +76,11 @@ a {
   height: 100vh;
 }
 
-.hero .banner img{
+.hero .banner img {
   width: 100%;
 }
 
-.hero .titles{
+.hero .titles {
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -88,21 +88,27 @@ a {
   flex: 1 1 auto;
 }
 
-.titles h1{
+.titles h1 {
   letter-spacing: 4px;
   margin: 0;
   font-size: 4rem;
 }
 
-.titles .seperator{
+.titles .separator {
   display: block;
   max-width: 800px;
-  margin: .2rem auto .4rem;
+  margin: 0.2rem auto 0.4rem;
   height: 1px;
-  background: linear-gradient(to left, rgba(255, 255, 255, 0) 5%, #fff 15%, #fff 80%, rgba(255, 255, 255, 0) 95%);
+  background: linear-gradient(
+    to left,
+    rgba(255, 255, 255, 0) 5%,
+    #fff 15%,
+    #fff 80%,
+    rgba(255, 255, 255, 0) 95%
+  );
 }
 
-.titles span{
+.titles span {
   font-family: 'Probert', sans-serif;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -126,7 +132,7 @@ a {
   font-size: 4rem;
 }
 
-.titles .seperator {
+.titles .separator {
   display: block;
   max-width: 800px;
   margin: 0.2rem auto 0.4rem;
