--- a/src/index.css
+++ b/src/index.css
@@ -76,48 +76,29 @@ a {
   height: 100vh;
 }
 
-.hero .banner img{
+.hero .banner{
+  display: flex;
+  justify-content: center;
   width: 100%;
+  height: 50%;
+  background-size: contain;
+  background-position: center top;
+  background-repeat: no-repeat;
+  margin-bottom: 4rem;
 }
 
 .hero .titles{
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  width: 100%;
   flex: 1 1 auto;
 }
 
-.titles h1{
-  letter-spacing: 4px;
-  margin: 0;
-  font-size: 4rem;
-}
-
-.titles .seperator{
-  display: block;
-  max-width: 800px;
-  margin: .2rem auto .4rem;
-  height: 1px;
-  background: linear-gradient(to left, rgba(255, 255, 255, 0) 5%, #fff 15%, #fff 80%, rgba(255, 255, 255, 0) 95%);
-}
-
-.titles span{
-  font-family: 'Probert', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 1.5rem;
-}
-
-/*  */
-
-.intro {
-  margin: auto;
-  text-align: center;
+.titles{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  flex: 1 1 auto;
+  align-items: center;
 }
 
 .titles h1 {
@@ -128,9 +109,9 @@ a {
 
 .titles .seperator {
   display: block;
-  max-width: 800px;
-  margin: 0.2rem auto 0.4rem;
-  height: 1px;
+  width: 40%;
+  height: 2px;
+  margin-bottom: .4rem;
   background: linear-gradient(
     to left,
     rgba(255, 255, 255, 0) 5%,
@@ -143,26 +124,92 @@ a {
 .titles span {
   font-family: 'Probert', sans-serif;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 /*  */
 
-.intro {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.intro img {
-  max-width: 600px;
-}
-
 nav {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 100%;
 }
+
+nav div{
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 0.3rem 0;
+}
+
+nav h1{
+  letter-spacing: 3px;
+  margin: 0;
+  display: inline-block;
+  font-size: 2.5rem;
+  flex-shrink: 0;
+  line-height: 40px;
+}
+
+.page-title{
+  line-height: 40px;
+  margin: 0;
+}
+
+.blue-bar{
+  background-color: #2A6087;
+  box-shadow: 0 0 8px #1ca3f16c;
+  height: 40px;
+  margin: 0 .3rem;
+}
+
+.orange-bar{
+  background-color: #B58D02;
+  box-shadow: 0 0 12px #bfb02c73;
+  height: 40px;
+  margin: 0 .3rem;
+}
+
+.x1{
+  width: calc(100% - 90%);
+}
+
+.x2{
+  width: calc(100% - 80%);
+}
+
+.x3{
+  width: calc(100% - 70%);
+}
+
+.x4{
+  width: calc(100% - 60%);
+}
+
+.x5{
+  width: calc(100% - 50%);
+}
+
+.x6{
+  width: calc(100% - 40%);
+}
+
+.x7{
+  width: calc(100% - 30%);
+}
+
+.x8{
+  width: calc(100% - 20%);
+}
+
+.x9{
+  width: calc(100% - 10%);
+}
+
+
 
 .nav-login {
   padding: 1em;
