--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,13 @@
 /* Variables */
 
 :root {
-  --heading-font: 'Probert Bold', sans-serif;
-  --main-font: 'Antonio', 'Lato', sans-serif;
+  --title-font: 'Probert Bold', sans-serif;
+  --heading-font: 'Probert', sans-serif;
+  --episode-font: 'Antonio', 'Lato', sans-serif;
+  --main-font: 'Lato', sans-serif;
   --bg-color: #242842;
   --font-color: #ffffff;
-  --good-yellow: #b58d02;
+  --good-orange: #b58d02;
   --good-blue: #2a6087;
   --highlight: #617da6;
 }
@@ -42,8 +44,16 @@ body {
 h1,
 h2,
 h3 {
-  font-family: var(--heading-font);
   text-transform: uppercase;
+}
+
+h1{
+  font-family: var(--title-font);
+}
+
+h2, 
+h3{
+  font-family: var(--heading-font);
 }
 
 p,
@@ -133,6 +143,8 @@ a {
 /*  */
 
 nav {
+  grid-row: 1 / 2;
+  grid-column: 1 / 3;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -157,18 +169,44 @@ nav h1{
 
 .page-title{
   line-height: 40px;
+  letter-spacing: 1px;
   margin: 0;
 }
 
+.flavor-text-1{
+  font-size: .45rem;
+  height: 40px;
+  display: initial;
+  overflow: hidden;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.flavor-text-1 span{
+  display: block;
+}
+
+.flavor-text-1 span:nth-of-type(1), .flavor-text-1 span:nth-of-type(2){
+  color: var(--good-blue);
+  text-shadow: 0 0 8px #1ca3f16c;
+}
+
+.flavor-text-1 span:nth-of-type(3), .flavor-text-1 span:nth-of-type(4){
+  color: var(--good-orange);
+  text-shadow: 0 0 12px #bfb02c73;
+}
+
 .blue-bar{
-  background-color: #2A6087;
+  background-color: var(--good-blue);
   box-shadow: 0 0 8px #1ca3f16c;
   height: 40px;
   margin: 0 .3rem;
 }
 
 .orange-bar{
-  background-color: #B58D02;
+  background-color: var(--good-orange);
   box-shadow: 0 0 12px #bfb02c73;
   height: 40px;
   margin: 0 .3rem;
@@ -211,8 +249,57 @@ nav h1{
 }
 
 
+/* main content */
+
+.container{
+  display: grid;
+  grid-template-rows: 95px auto;
+  grid-template-columns: 1fr 3fr;
+  gap: .5rem;
+  align-items: start;
+}
+
+/* sidebar */
+
+.sidebar{
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+  justify-self: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.1rem;
+  padding: 2rem;
+}
+
+.sidebar p{
+  line-height: 160%;
+}
+
+.sidebar img{
+  max-width: 400px;
+  margin-bottom: 2rem;
+}
+
+/* main */
+
+.post-index{
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  padding: 2rem;
+}
 
 .nav-login {
   padding: 1em;
   text-align: center;
+}
+
+.episode{
+  margin: 1rem;
+}
+
+.episode h3{
+  font-family: var(--episode-font);
+  letter-spacing: 2px;
 }
