--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,12 @@ a {
   color: var(--font-color);
 }
 
+/* App */
+
+.App{
+
+}
+
 /* Hero */
 
 .hero {
@@ -84,6 +90,10 @@ a {
   flex-direction: column;
   align-items: center;
   height: 100vh;
+}
+
+.hero div:last-of-type{
+  flex: 1 1 auto;
 }
 
 
@@ -198,6 +208,17 @@ nav h1{
   text-shadow: 0 0 12px #bfb02c73;
 }
 
+.blue-bar, .orange-bar{
+  display: flex;
+  color: white;
+  font-family: var(--episode-font);
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-size: .6rem;
+  padding: .2rem;
+  text-shadow: 0 0 2px white;
+}
+
 .blue-bar{
   background-color: var(--good-blue);
   box-shadow: 0 0 8px #1ca3f16c;
@@ -302,4 +323,47 @@ nav h1{
 .episode h3{
   font-family: var(--episode-font);
   letter-spacing: 2px;
+}
+
+
+/* Misc */
+
+.fake-player{
+  display: flex;
+  align-items: center;
+  border: 1px solid #39437c;
+  background-color: #2d3250;
+  padding: 2rem;
+  border-radius: 7px;
+}
+
+.fake-play{
+  width: 0; 
+  height: 0; 
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-left: 25px solid white;
+  border-right: 0;
+  margin-right: 25px;
+  background-color: transparent;
+}
+
+.fake-play:active{
+  border-left: 25px solid rgba(255, 255, 255, 0.24);
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-right: 0;
+}
+
+
+.fake-progress{
+
+  background-color: white;
+  height: 2px;
+  margin-top: .58rem;
+}
+
+.read-more{
+  text-align: center;
+  margin-top: 2rem;
 }
