--- a/src/index.css
+++ b/src/index.css
@@ -47,12 +47,12 @@ h3 {
   text-transform: uppercase;
 }
 
-h1{
+h1 {
   font-family: var(--title-font);
 }
 
-h2, 
-h3{
+h2,
+h3 {
   font-family: var(--heading-font);
 }
 
@@ -86,8 +86,7 @@ a {
   height: 100vh;
 }
 
-
-.hero .banner{
+.hero .banner {
   display: flex;
   justify-content: center;
   width: 100%;
@@ -106,7 +105,7 @@ a {
   flex: 1 1 auto;
 }
 
-.titles{
+.titles {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -122,7 +121,7 @@ a {
   display: block;
   width: 40%;
   height: 2px;
-  margin-bottom: .4rem;
+  margin-bottom: 0.4rem;
   background: linear-gradient(
     to left,
     rgba(255, 255, 255, 0) 5%,
@@ -151,14 +150,14 @@ nav {
   width: 100%;
 }
 
-nav div{
+nav div {
   width: 100%;
   display: flex;
   flex-wrap: nowrap;
   margin: 0.3rem 0;
 }
 
-nav h1{
+nav h1 {
   letter-spacing: 3px;
   margin: 0;
   display: inline-block;
@@ -167,14 +166,14 @@ nav h1{
   line-height: 40px;
 }
 
-.page-title{
+.page-title {
   line-height: 40px;
   letter-spacing: 1px;
   margin: 0;
 }
 
-.flavor-text-1{
-  font-size: .45rem;
+.flavor-text-1 {
+  font-size: 0.45rem;
   height: 40px;
   display: initial;
   overflow: hidden;
@@ -184,84 +183,85 @@ nav h1{
   justify-content: space-evenly;
 }
 
-.flavor-text-1 span{
+.flavor-text-1 span {
   display: block;
 }
 
-.flavor-text-1 span:nth-of-type(1), .flavor-text-1 span:nth-of-type(2){
+.flavor-text-1 span:nth-of-type(1),
+.flavor-text-1 span:nth-of-type(2) {
   color: var(--good-blue);
   text-shadow: 0 0 8px #1ca3f16c;
 }
 
-.flavor-text-1 span:nth-of-type(3), .flavor-text-1 span:nth-of-type(4){
+.flavor-text-1 span:nth-of-type(3),
+.flavor-text-1 span:nth-of-type(4) {
   color: var(--good-orange);
   text-shadow: 0 0 12px #bfb02c73;
 }
 
-.blue-bar{
+.blue-bar {
   background-color: var(--good-blue);
   box-shadow: 0 0 8px #1ca3f16c;
   height: 40px;
-  margin: 0 .3rem;
+  margin: 0 0.3rem;
 }
 
-.orange-bar{
+.orange-bar {
   background-color: var(--good-orange);
   box-shadow: 0 0 12px #bfb02c73;
   height: 40px;
-  margin: 0 .3rem;
+  margin: 0 0.3rem;
 }
 
-.x1{
+.x1 {
   width: calc(100% - 90%);
 }
 
-.x2{
+.x2 {
   width: calc(100% - 80%);
 }
 
-.x3{
+.x3 {
   width: calc(100% - 70%);
 }
 
-.x4{
+.x4 {
   width: calc(100% - 60%);
 }
 
-.x5{
+.x5 {
   width: calc(100% - 50%);
 }
 
-.x6{
+.x6 {
   width: calc(100% - 40%);
 }
 
-.x7{
+.x7 {
   width: calc(100% - 30%);
 }
 
-.x8{
+.x8 {
   width: calc(100% - 20%);
 }
 
-.x9{
+.x9 {
   width: calc(100% - 10%);
 }
 
-
 /* main content */
 
-.container{
+.container {
   display: grid;
   grid-template-rows: 95px auto;
   grid-template-columns: 1fr 3fr;
-  gap: .5rem;
+  gap: 0.5rem;
   align-items: start;
 }
 
 /* sidebar */
 
-.sidebar{
+.sidebar {
   grid-row: 2 / 3;
   grid-column: 1 / 2;
   justify-self: center;
@@ -273,18 +273,18 @@ nav h1{
   padding: 2rem;
 }
 
-.sidebar p{
+.sidebar p {
   line-height: 160%;
 }
 
-.sidebar img{
+.sidebar img {
   max-width: 400px;
   margin-bottom: 2rem;
 }
 
 /* main */
 
-.post-index{
+.post-index {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   padding: 2rem;
@@ -295,11 +295,11 @@ nav h1{
   text-align: center;
 }
 
-.episode{
+.episode {
   margin: 1rem;
 }
 
-.episode h3{
+.episode h3 {
   font-family: var(--episode-font);
   letter-spacing: 2px;
 }
