--- a/src/index.css
+++ b/src/index.css
@@ -150,25 +150,22 @@ a {
   text-align: center;
 }
 
-/*  */
+/* lcars header */
 
-nav {
+.header-top {
   grid-row: 1 / 2;
   grid-column: 1 / 3;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
   width: 100%;
 }
 
-nav div{
+.header-top div{
   width: 100%;
   display: flex;
   flex-wrap: nowrap;
-  margin: 0.3rem 0;
 }
 
-nav h1{
+.header-top h1{
   letter-spacing: 3px;
   margin: 0;
   display: inline-block;
@@ -181,6 +178,7 @@ nav h1{
   line-height: 40px;
   letter-spacing: 1px;
   margin: 0;
+  width: 100%;
 }
 
 .flavor-text-1{
@@ -208,6 +206,77 @@ nav h1{
   text-shadow: 0 0 12px #bfb02c73;
 }
 
+.header-bottom {
+  display: flex;
+  width: 100%;
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+}
+
+.header-bottom ul{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  width: 100%;
+}
+
+.header-bottom ul li{
+
+  padding: 0;
+  list-style: none;
+  position: relative;
+  width: 50%;
+}
+
+.header-bottom input[type=radio]{
+  visibility: hidden;
+  display: none;
+}
+
+.header-bottom label{
+  position: absolute;
+  text-align: center;
+
+}
+
+.header-bottom label:after, .header-bottom label:before{
+  content: '';
+  display: block;
+  width: 60px;
+  height: 3px;
+}
+
+.header-bottom input[type=radio]:checked + label:after, .header-bottom input[type=radio]:checked + label:before{
+  content: '';
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: var(--good-orange);
+  box-shadow: 0 0 12px #bfb02c73;
+  margin: auto;
+} 
+
+.header-bottom ul li:first-child{
+  margin-left: .3rem;
+}
+
+.header-bottom .x1{
+  width: 20%;
+}
+
+.header-bottom .x9{
+  width: 200%;
+}
+
+.header-bottom ul li label{
+  font-family:var(--main-font);
+  font-weight: normal;
+  text-shadow: 0 0 6px #1ca3f15b;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  width: 100%;
+}
+
 .blue-bar, .orange-bar{
   display: flex;
   color: white;
@@ -218,6 +287,13 @@ nav h1{
   padding: .2rem;
   text-shadow: 0 0 2px white;
 }
+
+.lcars-fixed{
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+}
+
+
 
 .blue-bar{
   background-color: var(--good-blue);
@@ -234,39 +310,39 @@ nav h1{
 }
 
 .x1{
-  width: calc(100% - 90%);
+  width: 10%;
 }
 
 .x2{
-  width: calc(100% - 80%);
+  width: 20%;
 }
 
 .x3{
-  width: calc(100% - 70%);
+  width: 30%;
 }
 
 .x4{
-  width: calc(100% - 60%);
+  width: 40%;
 }
 
 .x5{
-  width: calc(100% - 50%);
+  width: 50%;
 }
 
 .x6{
-  width: calc(100% - 40%);
+  width: 60%;
 }
 
 .x7{
-  width: calc(100% - 30%);
+  width: 70%;
 }
 
 .x8{
-  width: calc(100% - 20%);
+  width: 80%;
 }
 
 .x9{
-  width: calc(100% - 10%);
+  width: 90%;
 }
 
 
@@ -274,16 +350,17 @@ nav h1{
 
 .container{
   display: grid;
-  grid-template-rows: 95px auto;
+  grid-template-rows: 42.5px 42.5px auto;
   grid-template-columns: 1fr 3fr;
-  gap: .5rem;
   align-items: start;
+  margin-top: 1rem;
+  row-gap: .5rem;
 }
 
 /* sidebar */
 
 .sidebar{
-  grid-row: 2 / 3;
+  grid-row: 3 / 4;
   grid-column: 1 / 2;
   justify-self: center;
   text-align: center;
@@ -306,9 +383,8 @@ nav h1{
 /* main */
 
 .post-index{
-  grid-row: 2 / 3;
+  grid-row: 3 / 4;
   grid-column: 2 / 3;
-  padding: 2rem;
 }
 
 .nav-login {
@@ -366,4 +442,50 @@ nav h1{
 .read-more{
   text-align: center;
   margin-top: 2rem;
+}
+
+div.orange-bar:nth-child(1){
+  display: none;
+}
+
+@media screen and (max-width:1400px){
+  .header-bottom .x9{
+    width: 20%;
+  }
+
+  div.blue-bar:nth-child(4){
+    display: none;
+  }
+}
+
+
+@media screen and (max-width:1000px){
+  .hero .banner{
+    height: 20%;
+  }
+  .container{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sidebar img{
+    max-width: 200px;
+  }
+
+  .sidebar p{
+    font-size: 1rem;
+    line-height: 140%;
+  }
+
+  .header-top h1{
+    font-size: 2rem;
+  }
+  
+  div.orange-bar:nth-child(1){
+    display: flex;
+  }
+
+  .lcars-fixed, div.x2:nth-child(5), .flavor-text-1.x2, div.blue-bar:nth-child(3){
+    display: none;
+  }
 }
