--- a/src/index.css
+++ b/src/index.css
@@ -402,13 +402,20 @@ a {
 
 .post{
   margin: 1rem;
-  padding-bottom: 1rem;
-  display: flex;
-  height: 400px;
+}
+
+.post:before{
+  content: '';
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: var(--highlight);
+  box-shadow: 0 0 8px #3437386c;
 }
 
 .post-container{
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-evenly;
 }
 
@@ -416,48 +423,65 @@ a {
   flex-direction: row-reverse;
 }
 
-.post-details{
-  width: 50%;
+
+.post-wrapper{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 2rem 0;
 }
 
-/* .post-details:before{
-  content: '';
-  display: block;
-  width: 112%;
-  height: 3px;
-  transform: translateX(-45px);
-  background-color: var(--highlight);
-  box-shadow: 0 0 8px #3437386c;
-} */
+.post-details{
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+
+.post-details header h3{
+  margin: 0;
+}
 
 .post-details p{
-  padding: 0 1rem;
+  
+}
+
+.post-brief{
+  height: 50px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 
 .post-image{
-
-  width: 505px;
-  display: block;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
   overflow: hidden;
+  height: 300px;
+  background-color: rgb(24, 24, 53);
+  display: flex;
+  justify-content: center;
 }
 
+
 .post-image img{
-  width: 100%;
+  object-fit: contain;
 }
 
 .post-left, .post-right{
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  height: 300px;
+  padding: 1.75rem 0;
+}
+
+.post-left{
   padding-right: 1rem;
-  height: 293.44px;
-  transform: translateY(15px);
 }
 
 .post-right{
-  transform: translateX(60px);
+  padding-left: 1rem;
 }
+
 
 .post-left > div, .post-right > div{
   width: 30px;
