--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   --episode-font: 'Antonio', 'Lato', sans-serif;
   --main-font: 'Lato', sans-serif;
   --bg-color: #242842;
-  --font-color: #ffffff;
+  --font-color: #f0f0f0;
   --good-orange: #b58d02;
   --good-blue: #2a6087;
   --highlight: #617da6;
@@ -393,6 +393,7 @@ a {
   grid-column: 2 / 3;
   width: 95%;
   display: flex;
+  margin-top: 1rem;
 }
 
 .nav-login {
@@ -419,8 +420,10 @@ a {
   justify-content: space-evenly;
 }
 
-.post:nth-of-type(even) .post-container{
-  flex-direction: row-reverse;
+.post:nth-of-type(even) .post-details{
+  grid-column: 2 / 3;
+  padding-right: 0;
+  padding-left: 2rem;
 }
 
 
@@ -434,6 +437,8 @@ a {
 .post-details{
   grid-row: 1 / 2;
   grid-column: 1 / 2;
+  padding-right: 2rem;
+  padding-left: 0;
 }
 
 .post-details header h3{
@@ -461,6 +466,11 @@ a {
   justify-content: center;
 }
 
+.post:nth-of-type(even) .post-image{
+  grid-column: 1 / 2;
+}
+
+
 
 .post-image img{
   object-fit: contain;
@@ -470,7 +480,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 300px;
+
   padding: 1.75rem 0;
 }
 
@@ -501,7 +511,7 @@ a {
 }
 
 .post summary{
-  color: white;
+  color: var(--font-color);
   font-family: var(--main-font);
 }
 
