--- a/src/index.css
+++ b/src/index.css
@@ -261,7 +261,7 @@ a {
   width: 60px;
   height: 3px;
   background-color: var(--good-orange);
-  box-shadow: 0 0 12px #bfb02c73;
+  box-shadow: 0 0 8px #bfb02c73;
   margin: auto;
 } 
 
@@ -304,14 +304,14 @@ a {
 
 .blue-bar{
   background-color: var(--good-blue);
-  box-shadow: 0 0 8px #1ca3f16c;
+  box-shadow: 0 0 6px #1ca3f16c;
   height: 40px;
   margin: 0 0.3rem;
 }
 
 .orange-bar {
   background-color: var(--good-orange);
-  box-shadow: 0 0 12px #bfb02c73;
+  box-shadow: 0 0 6px #bfb02c73;
   height: 40px;
   margin: 0 0.3rem;
 }
@@ -394,6 +394,7 @@ a {
   width: 95%;
   display: flex;
   margin-top: 1rem;
+
 }
 
 .nav-login {
@@ -402,10 +403,21 @@ a {
 }
 
 .post{
-  margin: 1rem;
+  margin: 5rem 1rem;
+  position:relative;
+
 }
 
 .post:before{
+  content: '';
+  display: block;
+  width: 100%;
+  height: 3px;
+  margin-bottom: 1rem; 
+  background-color: var(--highlight);
+}
+
+.post:after{
   content: '';
   display: block;
   width: 100%;
@@ -424,6 +436,16 @@ a {
   grid-column: 2 / 3;
   padding-right: 0;
   padding-left: 2rem;
+}
+
+.stardate{
+  position: absolute;
+  top: -7px;
+  left: 30px;
+  background-color: var(--bg-color);
+  padding: 0 1rem;
+  font-family: var(--heading-font);
+  letter-spacing: 1px;
 }
 
 
