--- a/src/index.css
+++ b/src/index.css
@@ -444,9 +444,15 @@ main{
   background-color: var(--highlight);
 }
 
-.post-container{
+.post:nth-of-type(odd) .post-container{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr auto;
+  justify-content: space-evenly;
+}
+
+.post:nth-of-type(even) .post-container{
+  display: grid;
+  grid-template-columns: auto 1fr;
   justify-content: space-evenly;
 }
 
@@ -598,7 +604,7 @@ div.orange-bar:nth-child(1){
 
 
 
-#about h3{
+.about h3{
   font-family: var(--heading-font);
   font-size: 2rem;
 }
