--- a/src/index.css
+++ b/src/index.css
@@ -297,7 +297,6 @@ a {
   align-items: flex-end;
   font-size: .6rem;
   padding: .2rem;
-  text-shadow: 0 0 2px white;
 }
 
 .lcars-fixed{
@@ -704,6 +703,94 @@ div.orange-bar:nth-child(1){
 }
 
 
+/* Admin */
+
+.admin-panel{
+  display: flex;
+
+}
+
+.admin-menu ul{
+  margin: 0 1rem 0 0;
+  padding: 0;
+}
+
+.admin-menu ul li{
+  list-style-type: none;
+  margin: .25rem 0;
+}
+
+.admin-menu li button{
+  width: 100%;
+  background-color: var(--good-blue);
+  border: none;
+  color: white;
+  padding: .25rem 1rem;
+  transition: all .2s;
+  font-size: 1.1rem;
+  box-shadow: 2px 2px 4px black;
+  border-radius: 2px;
+}
+
+.admin-menu li button:hover{
+  box-shadow: 0px 0px 4px black;
+}
+
+.admin-menu li button:hover{
+  background-color: rgb(86, 86, 182);
+}
+
+.admin-viewer{
+  height: 500px;
+  flex: 1 1 auto;
+
+}
+
+.text-editor-container{
+  height: 100%;
+}
+
+.admin-viewer h2{
+  margin-top: 0;
+}
+
+.text-editor-content a, 
+.text-editor-content p, 
+.text-editor-content h1, 
+.text-editor-content h2,
+.text-editor-content h3,
+.text-editor-content h4,
+.text-editor-content h5{
+  color: black;
+}
+
+.toolbar{
+  background-color: rgb(194, 194, 194);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.toolbar .tools{
+  width: 30px;
+  height: 30px;
+  background-color: rgb(117, 117, 117);
+  border: none;
+  margin: .1rem;
+  padding: 0;
+}
+
+.toolbar .tools img{
+  width: 100%;
+  height: auto;
+}
+
+.text-editor-content{
+  background-color: rgb(233, 233, 233);
+  height: 100%;
+  overflow: auto;
+}
+
 
 @media screen and (max-width:1400px){
   .header-bottom .x9{
@@ -712,6 +799,21 @@ div.orange-bar:nth-child(1){
 
   div.blue-bar:nth-child(4){
     display: none;
+  }
+
+  .post .post-wrapper .post-container{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+
+  .post .post-wrapper .post-container .post-image{
+    justify-content: center;
+    margin-top: 1rem;
+  }
+
+  .post .post-wrapper .post-container .post-details{
+    padding: 2rem;
   }
 }
 
@@ -745,4 +847,6 @@ div.orange-bar:nth-child(1){
   .lcars-fixed, div.x2:nth-child(5), .flavor-text-1.x2, div.blue-bar:nth-child(3){
     display: none;
   }
+
+
 }
